# excel_agent

./: .gitignore  Cargo.toml  Dioxus.toml  agent_utils.py  backend.py  build.rs  data.xlsx.bak  excel_core.py  key  plan.md  system_prompt.md
assets/: main.css  prompt_coder.md  prompt_planner.md  system_prompt.md  tailwind.css
src/: main.rs  models.rs
src/components/: chat_view.rs  data_table.rs  dock_capsule.rs  input_area.rs  mod.rs  settings.rs  sidebar.rs  title_bar.rs  widget_ball.rs
src/services/: ai.rs  config.rs  mod.rs  python.rs
