[package]
name = "excel_agent"
version = "0.1.0"
authors = ["zhouguangyao <909048139@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["desktop", "router"] }
# 日志库
dioxus-logger = "0.7.3"
tracing = "0.1"

# 序列化支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

pyo3 = { version = "0.20", features = ["auto-initialize", "abi3-py311"] }

# HTTP 客户端，用于调用 AI API
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
