[package]
name = "excel_agent"
version = "0.1.0"
authors = ["zhouguangyao <909048139@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["desktop", "router"] }
dioxus-logger = "0.7.3" # 日志库
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] } # 序列化支持
serde_json = "1.0"
pyo3 = { version = "0.20", features = ["auto-initialize", "abi3-py311"] }
reqwest = { version = "0.13.1", features = ["json"] } # HTTP 客户端，用于调用 AI API
tokio = { version = "1", features = ["full"] }
directories = "6.0.0" # 用于获取系统标准路径 (AppData)
uuid = { version = "1.0", features = ["v4", "serde"] } # 用于生成唯一ID
image = "0.25.9" # 负责读取图标文件
anyhow = "1.0" # 处理错误
raw-window-handle = "0.6"
windows-sys = { version = "0.61.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
